# AthenaKit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
athenakit/: athena_data.py
athenakit/app/: acc.py
athenakit/io/: bin_convert.py
athenakit/physics/: grmhd.py  snr.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: app.md  athena_data.md  index.md  io.md  kit.md  physics.md  units.md  vis.md
docs/source/examples/: bondi.md  index.md  snr.md  torus.md
docs/source/getting_started/: installation.md  quickstart.md
